<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- app -->
    <string name="app_name">드롭</string>

    <!-- kakao -->
    <string name="kakao_login_view">카카오톡으로 로그인</string>
    <string name="kakao_native_app_key">642127e0f11def53eeec49c714efe72d</string>
    <string name="manifest_kakao_native_app_key">kakao642127e0f11def53eeec49c714efe72d</string>

    <!-- naver -->
    <string name="naver_client_id">lvdv2fig1b</string>
    <string name="naver_client_secret">mUxOpl2cVrogmlcTUAuXaXQLBobuo4fvPGu53kSd</string>

    <!-- login -->
    <string name="head_login_activity">나의 어떤 매일을 기록하다,</string>
    <string name="easy_login_activity">간편로그인</string>

    <string name="failure_kakao_login">카카오 로그인에 실패했습니다.</string>
    <string name="failure_request_login">로그인에 실패했습니다.</string>
    <string name="logged_out">로그아웃 되었습니다.</string>
    <string name="sign_out">회원탈퇴 되었습니다.</string>
    <string name="please_re_log_in">재로그인이 필요합니다.</string>

    <string name="menu_title_feed">Feed</string>
    <string name="menu_title_map">Map</string>
    <string name="menu_title_setting">Setting</string>

    <!-- feed -->
    <string name="feed_memory_title_text">drop point</string>
    <string name="feed_empty_memory_text">기록된 추억이 없습니다</string>
    <string name="feed_delete_memory_content">기록된 추억을 삭제하시겠습니까?</string>
    <string name="feed_delete_cancel">취소</string>
    <string name="feed_delete_ok">삭제</string>

    <!-- memory item -->
    <string name="memory_edit">수정</string>
    <string name="memory_remove">삭제</string>
    <string name="memory_content_more">더보기</string>

    <string name="failure_title">Error!</string>
    <string name="failure_subtitle">네트워크를 확인하세요</string>

    <string name="memory_content_hint">내용을 입력하세요</string>
    <string name="memory_drop_button">드롭하기</string>

    <!-- map container -->
    <string name="map_pin_title">drop point</string>
    <string name="map_request_permission">현 위치 설정을 켜기 위해서는 권한이 필요합니다.</string>
    <string name="map_please_grant_permissions">필요한 권한을 허용해주세요.</string>
    <string name="map_permission_denied">권한이 거절되었습니다!</string>

    <!-- add memory -->
    <string name="add_memory_empty_location">위치 정보 없음</string>
    <string name="add_memory_cancel">취소</string>
    <string name="add_memory_title">새로운 추억</string>

    <string name="add_memory_fail_upload">이미지 업로드에 실패했습니다! 다시 시도해주세요.</string>
    <string name="add_memory_not_select_photo">선택된 사진이 없습니다.</string>
    <string name="add_memory_missing_locate_information">선택된 사진에 위치 정보가 없습니다\n위치 정보가 포함된 사진을 선택하시거나, 사진을 찍을 때 위치 옵션을 활성화 해주세요.</string>

    <string name="add_memory_request_permission">추억을 등록하기 위해 권한이 필요합니다.</string>
    <string name="add_memory_please_grant_permissions">필요한 권한을 허용해주세요.</string>
    <string name="add_memory_permission_denied">권한이 거절되었습니다!</string>

    <!-- setting -->
    <string name="setting_title">회원 정보</string>
    <string name="setting_service_terms">서비스 이용약관</string>
    <string name="setting_private_terms">개인정보 취급방침</string>
    <string name="setting_current_version">현재 버전</string>
    <string name="setting_logout">로그아웃</string>
    <string name="setting_sign_out">회원 탈퇴</string>
    <string name="setting_failure_load_user_information">사용자 정보를 불러오는데 실패했습니다.</string>
    <string name="setting_failure_logout_please_retry">로그아웃에 실패했습니다. 다시 시도해주세요</string>
    <string name="setting_failure_sign_out_please_retry">회원탈퇴에 실패했습니다. 다시 시도해주세요</string>

    <string name="setting_sign_out_content">탈퇴하시면 기록된 모든 추억이 삭제됩니다.\n회원을 탈퇴하시겠습니까?</string>
    <string name="setting_sign_out_cancel">취소</string>
    <string name="setting_sign_out_ok">탈퇴</string>

    <!-- modify -->
    <string name="modify_memory_title">추억 수정</string>
    <string name="modify_memory_cancel">취소</string>
    <string name="modify_failure_please_retry">수정에 실패했습니다.\n다시 시도해주세요</string>

</resources>